--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@ xmlns:tools="http://schemas.android.com/tools">
     tools:targetApi="31">
     <activity
         android:name=".Controller"
+        android:configChanges="orientation|screenSize|keyboardHidden"
         android:windowSoftInputMode="adjustPan"
         android:exported="true">
         <intent-filter>
